<resources>
    <string name="app_name">Settings</string>

    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">
        Get your photos, videos, contacts, subscriptions etc on all your devices.
    </string>

    <string name="pref_syncConnectionType">Sync Connection Type</string>
    <string name="pref_syncConnectionType_dialog_title">Perform Sync Using</string>
    <string name="pref_syncConnectionType_default_value">Wifi</string>
    <string name="pref_syncConnectionType_summary">Wifi Access</string>

    <string-array name="pref_syncConnectionType_entries">
        <item>Wifi</item>
        <item>Mobile Data</item>
        <item>Wifi/Mobile Data</item>
    </string-array>

    <string-array name="pref_syncConnectionType_values">
        <item>Wi-fi</item>
        <item>Mobile Data</item>
        <item>Wi-fi/Mobile Data</item>
    </string-array>


    <string name="storage_group_title">STORAGE</string>
    <string name="text_message_group_title">TEXT (SMS) MESSAGES</string>
    <string name="text_multimedia_message_group_title">MULTIMEDIA (MMS) MESSAGE</string>

    <string name="delete_message_title">Delete old messages</string>
    <string name="delete_message_summary">Delete old messages as limits are reached</string>

    <string name="text_message_limit_title">Text message limit</string>
    <string name="text_message_limit_summary">200 message per conversation</string>

    <string name="multimedia_message_limit_title">Multimedia message limit</string>
    <string name="multimedia_message_limit_summary">150 messages per conversation</string>

    <string name="delivery_reports_title">Delivery reports</string>
    <string name="delivery_reports_summary">Request a delivery report for each message you send</string>

    <string name="sim_card_message_title">Manage SIM card messages</string>
    <string name="sim_card_message_summary">Manage messages stored on your SIM card</string>

    <!--Sub Screen of settings-->

    <string name="ringtone_title_group">RINGTONE</string>
    <string name="other_callSettings_title_group">OTHER CALL SETTINGS</string>

    <string name="voiceMail_title">Voice Mail</string>
    <string name="dial_pad_touch_tone">Dial pad touch tones</string>
    <string name="vibrate_ringing_title">Vibrate when ringing</string>
    <string name="phone_ringtone_title">Phone ringtone</string>

    <string name="service_title">Service</string>
    <string name="service_summary">Google Voice</string>
    <string name="setup_title">Setup</string>
    <string name="ringtone_title">Ringtone</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary">Always</string>

    <string name="settings">Settings</string>
</resources>
